Ready for testing
Выполнены все задания 3 лекции.

--- a/GeniusIdiot/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
+++ b/GeniusIdiot/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\GeniusIdiot.Common\GeniusIdiot.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\JSONFiles\" />
+  </ItemGroup>
+
 </Project>
