--- a/GeniusIdiot/GeniusIdiotWinFormsApp/GeniusIdiotWinFormsApp.csproj
+++ b/GeniusIdiot/GeniusIdiotWinFormsApp/GeniusIdiotWinFormsApp.csproj
@@ -8,4 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeniusIdiot.Common\GeniusIdiot.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\JSONFiles\" />
+  </ItemGroup>
+
 </Project>
